--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
         <aspectj>1.9.4</aspectj>
         <jjwt>0.9.1</jjwt>
         <jaxb-api>2.3.1</jaxb-api>
+        <activation>1.1.1</activation>
+        <jaxb-runtime>2.3.3</jaxb-runtime>
         <poi>3.16</poi>
     </properties>
     <dependencyManagement>
@@ -104,6 +106,18 @@
                 <artifactId>jaxb-api</artifactId>
                 <version>${jaxb-api}</version>
             </dependency>
+
+            <!--<dependency>
+                <groupId>javax.activation</groupId>
+                <artifactId>activation</artifactId>
+                <version>${activation}</version>
+            </dependency>-->
+
+            <!--<dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <version>${jaxb-runtime}</version>
+            </dependency>-->
 
             <!-- poi -->
             <dependency>
